k3s/cine-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cine-platform
  namespace: cine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cine-platform
  template:
    metadata:
      labels:
        app: cine-platform
    spec:
      containers:
        - name: cine-platform
          image: cine-platform-dev
          command: ["python3"]
          args: ["app.py", "--reload"]

          ports:
            - containerPort: 5000

          volumeMounts:
            - name: src
              mountPath: /app

            - name: uploads
              mountPath: /app/uploads

            - name: temp
              mountPath: /app/temp

            - name: outputs
              mountPath: /app/outputs

            - name: logs
              mountPath: /app/logs

            - name: movies
              mountPath: /data/movies

            - name: thumbnails
              mountPath: /data/thumbnails

      volumes:
        - name: src
          hostPath:
            path: /home/jetson/Public/cine-app/cine-platform
            type: Directory

        - name: uploads
          hostPath:
            path: /home/jetson/cine/uploads
            type: DirectoryOrCreate

        - name: temp
          hostPath:
            path: /home/jetson/cine/temp
            type: DirectoryOrCreate

        - name: outputs
          hostPath:
            path: /home/jetson/cine/outputs
            type: DirectoryOrCreate

        - name: logs
          hostPath:
            path: /home/jetson/cine/logs
            type: DirectoryOrCreate

        - name: movies
          hostPath:
            path: /mnt/servidor/Data2TB/audiovisual/
            type: Directory

        - name: thumbnails
          hostPath:
            path: /mnt/servidor/Data2TB/audiovisual/thumbnails/
            type: Directory
