k3s/cine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cine-platform
  namespace: cine
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: cine-platform
  template:
    metadata:
      labels:
        app: cine-platform
    spec:
      containers:
        - name: cine-platform
          image: felixmurcia/cine-platform:latest
          ports:
            - containerPort: 9443

          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
            - name: temp
              mountPath: /app/temp
            - name: outputs
              mountPath: /app/outputs
            - name: logs
              mountPath: /app/logs
            - name: movies
              mountPath: /data/movies
            - name: thumbnails
              mountPath: /data/thumbnails
            - name: certs
              mountPath: /certs
              readOnly: true

      volumes:
        - name: uploads
          hostPath:
            path: /home/jetson/cine/uploads
            type: DirectoryOrCreate
        - name: temp
          hostPath:
            path: /home/jetson/cine/temp
            type: DirectoryOrCreate
        - name: outputs
          hostPath:
            path: /home/jetson/cine/outputs
            type: DirectoryOrCreate
        - name: logs
          hostPath:
            path: /home/jetson/cine/logs
            type: DirectoryOrCreate
        - name: movies
          hostPath:
            path: /mnt/DATA_2TB/audiovisual/
            type: Directory
        - name: thumbnails
          hostPath:
            path: /mnt/DATA_2TB/audiovisual/thumbnails/
            type: Directory
        - name: certs
          hostPath:
            path: /var/lib/tailscale/certs
