k3s/pocketbase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  namespace: cine
spec:
  selector:
    app: pocketbase
  ports:
    - name: http
      port: 8070
      targetPort: 8070
